Skip warning, style select and mode select menus when selecting "Game Start" in main menu

--- a/metrics.ini
+++ b/metrics.ini
@@ -3,3 +3,13 @@
 FallbackTheme=default
 
 # Now you can edit or add things. ##############################################
+
+[ScreenTitleMenu]
+# When pressing "Game start":
+# - Skip warning
+# - Select Versus in ScreenSelectStyle
+# - Select Normal PlayMode in ScreenSelectPlayMode
+# 
+# References:
+# - https://www.reddit.com/r/Stepmania/comments/exuip8/comment/fh6usdv/
+ChoiceGameStart="applydefaultoptions;playmode,regular;style,versus;text,Game Start;screen,ScreenSelectMusic"
