Set default song grouping/sorting to Popularity (Player's Best!) in ScreenSelectMusic

--- a/metrics.ini
+++ b/metrics.ini
@@ -13,3 +13,7 @@ FallbackTheme=default
 # References:
 # - https://www.reddit.com/r/Stepmania/comments/exuip8/comment/fh6usdv/
 ChoiceGameStart="applydefaultoptions;playmode,regular;style,versus;text,Game Start;screen,ScreenSelectMusic"
+
+[GameState]
+# Set default song grouping/sorting to Popularity (Player's Best!) in ScreenSelectMusic
+DefaultSort="Popularity"
