Don't loop song previews to silence the game when nobody's playing

--- a/metrics.ini
+++ b/metrics.ini
@@ -17,3 +17,7 @@ ChoiceGameStart="applydefaultoptions;playmode,regular;style,versus;text,Game Sta
 [GameState]
 # Set default song grouping/sorting to Popularity (Player's Best!) in ScreenSelectMusic
 DefaultSort="Popularity"
+
+[ScreenSelectMusic]
+# Silence the song picker when nobody's playing
+SampleMusicLoops=false
